kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-oidc
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/version:
        SNAPSHOT
      app.kubernetes.io/name:
        playground-oidc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: playground-oidc
        app.kubernetes.io/version: SNAPSHOT
    spec:
      containers:
        - image: julien-barbe-test:playground-oidc # julien-barbe-test:playground-oidc
          imagePullPolicy: IfNotPresent
          name: playground-oidc
          ports:
            - containerPort: 8080
              name: test-oidc
              protocol: TCP
#          livenessProbe:
#            failureThreshold: 3
#            httpGet:
#              path: /healthcheck
#              port: 80
#              scheme: HTTPS
#            initialDelaySeconds: 30
#            periodSeconds: 10
#            successThreshold: 1
#            timeoutSeconds: 1
#          ports:
#            - containerPort: 80
#              name: http
#              protocol: TCP
#          readinessProbe:
#            failureThreshold: 3
#            httpGet:
#              path: /healthcheck
#              port: 80
#              scheme: HTTPS
#            initialDelaySeconds: 30
#            periodSeconds: 10
#            successThreshold: 1
#            timeoutSeconds: 1
          resources:
            limits:
              cpu: "1"
              memory: 256M
            requests:
              cpu: "1"
              memory: 64M
          securityContext: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
