kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-oidc-service
  namespace: default
spec:
  selector:
    app.kubernetes.io/version:
      SNAPSHOT
    app.kubernetes.io/name:
      playground-oidc
  ports:
    - protocol: TCP
      targetPort: test-oidc
      port: 80
  type: ClusterIP
